--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "server",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,5 +18,16 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.9",
     "rand-token": "^1.0.1"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/oms801/PublicAttorneyMatching_Server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/oms801/PublicAttorneyMatching_Server/issues"
+  },
+  "homepage": "https://github.com/oms801/PublicAttorneyMatching_Server#readme"
 }
