--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.9",
+    "path": "^0.12.7",
     "rand-token": "^1.0.1",
     "request": "^2.88.2"
   },
