--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^2.0.9",
     "path": "^0.12.7",
     "rand-token": "^1.0.1",
+    "redis": "^3.1.2",
     "request": "^2.88.2"
   },
   "directories": {
