--- a/package.json
+++ b/package.json
@@ -5,7 +5,22 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./server.js",
+    "build": "pkg ."
+  },
+  "bin": {
+    "app": "./server.js"
+  },
+  "pkg": {
+    "assets": [
+      "public/**/*",
+      "category_image/**/*"
+    ],
+    "targets": [
+      "node10-win-x64",
+      "node10-macos-x64",
+      "node10-linux-x64"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -36,5 +51,12 @@
   "bugs": {
     "url": "https://github.com/oms801/PublicAttorneyMatching_Server/issues"
   },
-  "homepage": "https://github.com/oms801/PublicAttorneyMatching_Server#readme"
+  "homepage": "https://github.com/oms801/PublicAttorneyMatching_Server#readme",
+  "devDependencies": {
+    "pkg": "^5.3.1",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^3.0.0"
+  }
 }
