--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services: #container define
             - --lower_case_table_names=1
         volumes: 
             - ./db/mysql_data:/var/lib/mysql
+            - ./db/mysql_config:/etc/mysql/conf.d
     redis_server:
         container_name: redis_server
         image: "redis"
