--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 node_modules
 package-lock.json
 image/
-!image/README.md
 db/mysql_data/
-!db/mysql_data/README.md
 db/config/
-!db/config/README.md
+!README.md
