--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 .env
 node_modules
 package-lock.json
-image/
-db/mysql_data/
-db/config/
-!README.md
+!image/
+image/*
+!image/README.md
+!db/mysql_data/
+db/mysql_data/*
+!db/mysql_data/README.md
+!db/config/
+db/config/*
+!db/config/REAMDME.md
