jenkins webhook test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,6 @@
 version: "3.8" #docker-compose version
 
 services: #container define
-    express_server: #service name
-        container_name: express_server
-        image: "server"
-        ports: 
-            - "3000:3000"
     mysql_server:
         container_name: mysql_server
         image: "mysql"
@@ -20,11 +15,16 @@ services: #container define
             - --lower_case_table_names=1
         volumes: 
             - ./db/mysql_data:/var/lib/mysql
-            - ./db/mysql_config:/etc/mysql/conf.d
+            - ./db/config:/etc/mysql/conf.d
     redis_server:
         container_name: redis_server
         image: "redis"
         command: redis-server --port 6379
         ports :
             - "6379:6379"
+    express_server: #service name
+        container_name: express_server
+        image: "server"
+        ports: 
+            - "3000:3000"
         
